--- a/index.html
+++ b/index.html
@@ -5,14 +5,97 @@
 
     <!-- Google fonts -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Montserrat:400,700">
-
+    <link href="https://fonts.googleapis.com/css?family=Gudea|Poiret+One|Ubuntu" rel="stylesheet">
     <!-- Fontawesome -->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Your style -->
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <!-- your HTML code -->
+    <div class="container">
+      <div class="card">
+        <div class="presentation_card">
+          <div class="presentation_img">
+            <img src ="https://avatars1.githubusercontent.com/u/16139748?v=4" class="img-circle">
+          </div>
+          <div class="name_and_title">
+            <h1>Venance Valériane</h1>
+            <h2>Programmer</h2>
+          </div>
+          <p>Young programmer who loves to dev !<br>Digital nomad <s>wannabe</s> willbecome<br>@LeWagon @42 @TheFamily</p>
+        </div>
+      </div>
+      <div class="card">
+        <ul class="social_media_list">
+          <br>
+          <li>
+            <a href="https://github.com/vvenance" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i><br>Github</a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/ValerianeSeverin" target="_blank"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i><br>Facebook</a>
+          </li>
+          <li>
+            <a href="https://www.quora.com/profile/V-V-48/" target="_blank"><i class="fa fa-medium fa-2x" aria-hidden="true"></i><br>Medium</a>
+          </li>
+          <br>
+        </ul>
+      </div>
+      <div class="card">
+        <table>
+          <br>
+          <tr>
+            <h2>My favourite languages</h2>
+          </tr>
+          <tr>
+            <td>
+              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/The_C_Programming_Language%2C_First_Edition_Cover_%282%29.svg/1200px-The_C_Programming_Language%2C_First_Edition_Cover_%282%29.svg.png" height="100%"" width="100%">
+            </td>
+            <td>
+              <h3>C</h3>
+              <p><i>"In My Egotistical Opinion, most people's C programs should be indented six feet downward and covered with dirt."
+              - Blair P. Houghton.</i></p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Ruby_logo.svg/1024px-Ruby_logo.svg.png" height="100%" width="100%">
+            </td>
+            <td>
+              <h3>Ruby</h3>
+              <p><i>"Ruby on Rails is a breakthrough in lowering the barriers of entry to programming. Powerful web applications that formerly might have taken weeks or months to develop can be produced in a matter of days." - Tim O’Reilly</i></p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <img src="https://thenewboston.com/images/forum/logos/7.png" height="100%" width="100%">
+            </td>
+            <td>
+              <h3>ASM</h3>
+              <p><i>"Si tu as bien une TI82 (non stats), je pense pas qu'un programme en basic puisse appeller de l'assembleur, mais le contraire est peut-être possible." - Sandro Tiplanet.org</i></p>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Node.js_logo.svg/langfr-170px-Node.js_logo.svg.png" height="100%" width="100%">
+            </td>
+            <td>
+              <h3>Node.js</h3>
+              <p><i>"Chuck Norris was bitten by a cobra and after five days of excruciating pain... the cobra died." - Chuck Norris</i></p>
+            </td>
+          </tr>
+        </table>
+        <br>
+      </div>
+      <div class="card">
+        <h2><br><br><br><br><br>About this magnificent page</h2>
+        <br>
+        <p>This page was created during a session of @LeWagon<br>#batch-87 @Lille :hearts:</p>
+        <br>
+        <button class="s_f_y_button"><a class="button_link" href="https://www.lewagon.com/fr">Check for yourself</a></button>
+        <br>
+        <br>
+      </div>
+    </div>
   </body>
 </html>
